# proftpd-mod_amqp

./: .codeql.yml  .gitignore  .travis.yml  Makefile.in  README.md  configure  configure.in  mod_amqp.c  mod_amqp.h.in  mod_amqp.html  rabbitmq.c  tests.pl
.github/workflows/: ci.yml  codeql.yml
t/: Makefile.in
t/api/: rabbitmq.c  stubs.c  tests.c  tests.h
t/lib/ProFTPD/Tests/Modules/: mod_amqp.pm
t/modules/: mod_amqp.t
